Changed Title for page

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <body>
         <div class="container">
             <div class="Header">
-                <p class="text-center"> Random Quote Generator </p>
-            </div> 
+                <p class="text-center"> Quote Generator </p>
+            </div>
             
             <p class="quoteText" id="quoteText"> Quote Text </p>
             <p class="quoteAuthor" id="quoteAuthor"> Quote Text </p>
